package com.javarush.island.ostapenko.model.behavor;

public interface Breedable {
}
