package com.javarush.island.ostapenko.model.entity.animal;

public abstract class Animal {
}
