@startuml
interface Predator
interface Herbivore
abstract class Сreature
abstract class Animal
abstract class Plant
abstract class Insects

interface Eatable
interface Edible
interface Moveable
interface Killable
interface Breedable


Сreature<|-- Animal
Animal<|-- Insects
Сreature<|-- Plant

Plant<|-- Dandelion
Insects<|-- Caterpillar

Animal<|-- Wolf
Animal<|-- Fox
Animal<|-- Bear
Animal<|-- Eagle
Animal<|-- BoaConstrictor

Animal<|-- Horse
Animal<|-- Deer
Animal<|-- Rabbit
Animal<|-- Mouse
Animal<|-- Goat
Animal<|-- Sheep
Animal<|-- Boar
Animal<|-- Buffalo
Animal<|-- Duck

Predator<|.. Wolf
Predator<|.. Fox
Predator<|.. Bear
Predator<|.. Eagle
Predator<|.. BoaConstrictor


Herbivore<|.. Horse
Herbivore<|.. Deer
Herbivore<|.. Rabbit
Herbivore<|..  Mouse
Herbivore<|..  Goat
Herbivore<|.. Sheep
Herbivore<|.. Boar
Herbivore<|.. Buffalo
Herbivore<|.. Duck
Herbivore<|.. Caterpillar

@enduml